# fuego-suite

./: BOOST_LIB_ERROR_FIX.md  CMakeLists.txt  CryptoNote Core Compilation Errors  DOCKER.md  DYNAMIGO_RELEASE_V10_SUMMARY.md  FORK_CLASSIFICATION.md  Makefile  README.md  Testnet Upgrade Investigation
.github/workflows/: appimage.yml  build.yml  check.yml  docker.yml  raspberry-pi.yml  release.yml  termux.yml
Dockerfiles/: daemon  testnetd
docs/: TUI_Integration.md
fuego-kb-genesis/: 00-GETTING-STARTED
include/: IWallet.h  IWalletLegacy.h
rag_db/code_chunks.lance/_transactions/: 0-0fa3260f-245f-45c5-a81b-803f95a8028f.txn  1-48e9d6e8-11db-4469-b387-824d0979fab7.txn  10-0a0fa675-2916-4d83-b52a-359836eea9f0.txn  11-9638d9b5-b92d-42a8-807e-ba148f992907.txn  12-b2269e68-4a6a-4cab-9f5d-6e344b881c9b.txn  13-1f8ebe55-06c9-4a83-8c8e-64673130eb6f.txn  14-2a56acbd-260e-4512-b14f-5b9c9f04c985.txn  15-df7d07ee-29de-498e-9349-d48e5c03c277.txn  16-55b149aa-7a9f-40ff-8839-2e284f4b78fa.txn  17-9e4c2302-eefb-42c4-a1d1-bccd7ded0669.txn  18-f85cbc64-90b1-4cd9-8fe8-0d202bb685da.txn  19-82f87527-9d9b-4f0c-abc1-56ab1ae09e76.txn  2-432361d9-b677-4b01-9013-6c4066a939da.txn  20-3e7dac54-3d0b-4341-8f89-03e3cdacb31f.txn  21-a5bbfcf7-6fa5-4476-a434-a2f1c141f11a.txn  22-bf203967-587c-4f1c-8da5-3242674a1a86.txn  23-5724a603-7b2f-4957-a777-5586ced0cee8.txn  24-239bf864-0984-410b-a51c-bbb74139cf3b.txn  25-e5860b77-14c0-4178-b35f-f5a12f27f948.txn  26-a9a426e8-3c9d-4a73-b5e1-da6cc8aa6e22.txn  27-172cc113-89c9-4494-8d00-a8a620071185.txn  28-a3d69b87-54b9-4946-bc43-19d139992a50.txn  29-aa2e975e-c677-4f51-ac7e-26a2bf47e56e.txn  3-91b569ef-28fc-4b51-92ff-2810772946c3.txn  30-4536c47d-7cb9-4396-81f4-2a2aa93f1878.txn  31-c6690e3b-2520-4c8a-929e-67848296ff2d.txn  32-9a28770a-ff65-4d82-93ad-7c65abef59fe.txn  33-9c11c6d7-50b3-4f5e-8a6c-9dbfb57c1b74.txn  34-ef9b2def-d58a-45dd-8ff1-cc6f1fa054a5.txn  35-3b88bd06-d874-42fb-a265-0f9cc3ecec5d.txn  36-169ee616-0302-46e2-84e6-233d6c747b60.txn  37-30695fe9-be42-4eb6-9286-f6b6762a8c3b.txn  38-e51fc56a-83f0-4c18-9d5e-a83ffc01a004.txn  39-09be9dee-5e3c-4fa0-b1bd-ab437538c64b.txn  4-9184b5e2-b242-4a20-abc4-152fb9b06860.txn  40-e88e4aa9-52ed-4516-b5bb-fe56e3072f5e.txn  41-7568b563-b4d9-4890-bf17-d74d0c6eb2d8.txn  42-ef1966d8-5044-4382-9dd5-1275138ce64f.txn  43-ac80e2f4-8242-4718-ace7-24558616c0a0.txn  44-124a803e-b871-4f40-bebf-ad67eb20b61a.txn  (+56 more)
rag_db/code_chunks.lance/_versions/: 1.manifest  10.manifest  11.manifest  12.manifest  13.manifest  14.manifest  15.manifest  16.manifest  17.manifest  18.manifest  19.manifest  2.manifest  20.manifest  21.manifest  22.manifest  23.manifest  24.manifest  25.manifest  26.manifest  27.manifest  28.manifest  29.manifest  3.manifest  30.manifest  31.manifest  32.manifest  33.manifest  34.manifest  35.manifest  36.manifest  37.manifest  38.manifest  39.manifest  4.manifest  40.manifest  41.manifest  42.manifest  43.manifest  44.manifest  45.manifest  (+56 more)
src/: CMakeLists.txt  CryptoNoteConfig.h  version.h.in
src/BlockchainExplorer/: BlockchainExplorerDataBuilder.cpp
src/Common/: MathUtil.h
src/CryptoNoteCore/: AdaptiveDifficulty.cpp  BankingFee.cpp  Blockchain.cpp  Blockchain.h  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.cpp.broken  Core.h  Core_fixed.cpp  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteSerialization.cpp  Currency.cpp  Currency.cpp.backup  Currency.h  ProofStructures.cpp  ProofStructures.h  TransactionExtra.cpp  TransactionExtra.h  TransactionPool.cpp  TransactionPool.h  UpgradeDetector.h  banking_fee.cpp
src/CryptoNoteProtocol/: CryptoNoteProtocolHandler.cpp
src/Daemon/: Daemon.cpp  DaemonCommandsHandler.cpp
src/FuegoTor/: CMakeLists.txt
src/FuegoTor/src/: Fuegotor.cpp
src/InProcessNode/: InProcessNode.cpp  InProcessNode.h
src/NodeRpcProxy/: NodeRpcProxy.cpp
src/P2p/: NetNode.cpp
src/PaymentGate/: PaymentServiceJsonRpcMessages.cpp  PaymentServiceJsonRpcMessages.h  PaymentServiceJsonRpcServer.cpp  WalletService.cpp  WalletService.h
src/Platform/OSX/System/: Context.c  Context.h  TcpConnection.cpp  TcpListener.cpp
src/Rpc/: CoreRpcServerCommandsDefinitions.h  HttpServer.cpp  HttpServer.h  JsonRpc.h  RpcServer.cpp  RpcServer.h  RpcServerHttplib.cpp  RpcServerHttplib.h
src/Serialization/: SerializationOverloads.h
src/SimpleWallet/: PasswordContainer.cpp  SimpleWallet.cpp  SimpleWallet.h
src/System/: Context.h  Dispatcher.cpp  Dispatcher.h  TcpConnection.h  TcpListener.cpp  TcpListener.h
src/TestnetDaemon/: TestnetDaemon.cpp
src/TestnetWallet/: TestnetWallet.cpp
src/Transfers/: BlockchainSynchronizer.cpp
src/Wallet/: WalletGreen.cpp  WalletGreen.h
src/WalletLegacy/: WalletHelper.cpp  WalletLegacy.cpp  WalletLegacy.h  WalletTransactionSender.cpp
tests/UnitTests/V10Upgrade/: TestV10UpgradeDetector.cpp
tui/: CMakeLists.txt  build.sh  build_tview.sh  config.go  go.mod  go.sum  main.go  tview_main.go
tui-testnet/: go.mod  main.go
tui-tview/: .gitignore  go.mod  main.go  main.go.broken
